# dct_reconciler

./: README.md  cost_comparison.html  doc.html  output.docx
dct_simple/dct_simple/: .env.example  ARTICLE.md  DCT_Simple_Module_Guide.docx  README.md  architecture.html  pyproject.toml
dct_simple/dct_simple/compliance/: audit.py  hitl.py
dct_simple/dct_simple/computation/: engine.py
dct_simple/dct_simple/data/: synthetic.py
dct_simple/dct_simple/extractor/: constrained.py
dct_simple/dct_simple/judge/: llm_judge.py
dct_simple/dct_simple/parsers/: sources.py
dct_simple/dct_simple/pipeline/: run.py
dct_simple/dct_simple/schemas/: __init__.py  enums.py  observation.py  reports.py
dct_simple/dct_simple/scripts/: run_demo.py
dct_simple/dct_simple/tests/: test_all.py
dct_simple/dct_simple/validator/: rules.py
